<resources>
    <string name="app_name">HappyPizza</string>
    <string name="logo_happy_pizza">Logo Happy Pizza</string>
    <string name="ingresar_nombre">Ingrese su nombre de usuario</string>
    <string name="ingresar_contraseña">Ingrese su contraseña...</string>
    <string name="google">Continuar con Google</string>
    <string name="usuario">Usuario:</string>
    <string name="nombre">Ingrese su correo de usuario</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="contra">Contraseña:</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="carrito_de_compra">Carrito de Compra</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="ver_m_s_productos">Ver más productos...</string>
    <string name="happypizza">happypizza</string>
    <string name="pizza_nombre">Pizza Nombre</string>
    <string name="_25">precio</string>
    <string name="_1">cantidad</string>
    <string name="imagen_de_la_pizza">imagen de la pizza</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="delivery_icon">delivery_icon</string>
    <string name="delivery">Delivery</string>
    <string name="ingresa_tu_direcci_n_de_entrega">Ingresa tu dirección de entrega</string>
    <string name="utilizar_mi_ubicaci_n_actual">Utilizar mi ubicación actual</string>
    <string name="siguiente">Siguiente</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_un_nombre_de_usuario">Ingrese un nombre de usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="ingrese_su_correo_electr_nico">Ingrese su correo electrónico</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ingrese_una_contrase_a">Ingrese una contraseña</string>
    <string name="ingrese_su_contrase_a_nuevamente">Ingrese su contraseña nuevamente</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="home">Home</string>
    <string name="cuenta">Cuenta</string>
    <string name="carrito">Carrito</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pedidos">Pedidos</string>
    <string name="ingrese_su_tel_fono">Ingrese su teléfono</string>
    <string name="user_image">User Image</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="inicio">Inicio</string>
    <string name="mis_compras">Mis compras</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="informaci_n">Información</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="ayuda">Ayuda</string>
    <string name="promociones">Promociones</string>
    <string name="preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="t_rminos_y_condiciones">Términos y Condiciones</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="historial">Historial</string>
    <string name="todo">TODO</string>
</resources>