<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_happy_pizza" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_gravity="start" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/nombre"
        android:textColorHint="@color/black"
        android:textColor="#000"
        android:background="@drawable/rounded_input_background"
        android:padding="12dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/contra"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_gravity="start" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/contraseña"
        android:textColorHint="@color/black"
        android:background="@drawable/rounded_input_background"
        android:textColor="#000"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"
        app:passwordToggleEnabled="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/iniciar_sesi_n"
        android:textSize="16sp"
        android:textColor="#000"
        android:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#000000"
        android:textSize="16sp"
        android:text="@string/crear_nueva_cuenta"
        android:textColor="#FFFFFF" />

</LinearLayout>
