<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#232323"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo_happy_pizza"
                android:src="@drawable/logo"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happypizza"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrito_de_compra"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <Button
                android:id="@+id/button_confirm_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/confirmar_compra"
                android:backgroundTint="#D03139"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_view_more_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="80dp"
                android:text="@string/ver_m_s_productos"
                android:textSize="14sp"
                android:padding="8dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:menu="@menu/menu_ofertas" />

</LinearLayout>
